Use the parent of the placeholder (not the out-of-flow) when looking for an in-flow frame that follows the hint frame. b=322688 r=roc sr=bzbarsky